--- a/todojohn.Test/todojohn.Test.csproj
+++ b/todojohn.Test/todojohn.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -21,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\todojohn.Common\todojohn.Common.csproj" />
     <ProjectReference Include="..\todojohn.Functions\todojohn.Functions.csproj" />
   </ItemGroup>
 
